fixed some sonar issues